tests/ui/ferrocene/compiler-arguments/upper_c_panic/upper_c_panic_eq-empty.rs
//@ check-fail
//@ compile-flags: -Cpanic=
//~? ERROR incorrect value

fn main() {}

// ferrocene-annotations: um_rustc_C_panic
